@@ -7,6 +7,8 @@ May ## 2017 (bgol, horizon branch):
   without specifying it.
 . Updated EDAPI plugin to version 4.1.1
 . Updated Journal plugin to recognise the "Location" event.
+. Updated Journal plugin to recognise the "MarketSell" event to capture
+  black market sales.
 
 May 22 2017 (bgol, horizon branch):
 . Updated buy, rares, run and trade command to also output the
